--- a/src/Kiosk.form
+++ b/src/Kiosk.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="kiosk">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Kiosk">
   <grid id="27dc6" binding="BasePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="568" height="530"/>
