--- a/src/Kiosk.form
+++ b/src/Kiosk.form
@@ -36,7 +36,9 @@
         <properties>
           <font name="NanumGothic"/>
         </properties>
-        <border type="none"/>
+        <border type="none">
+          <title-color color="-16777216"/>
+        </border>
         <children>
           <scrollpane id="6735d" binding="CartScrollPane">
             <constraints>
@@ -50,6 +52,7 @@
               <component id="d3c7a" class="javax.swing.JTable" binding="CartTable">
                 <constraints/>
                 <properties>
+                  <enabled value="true"/>
                   <font name="NanumGothic"/>
                   <preferredScrollableViewportSize width="450" height="220"/>
                   <rowHeight value="25"/>
@@ -116,14 +119,23 @@
               <font/>
             </border>
             <children>
-              <grid id="adae4" binding="deriImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="adae4" binding="deriImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="45325" class="javax.swing.JLabel" binding="deriImageLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="c"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <component id="6bbe8" class="javax.swing.JComboBox" binding="deriAmount">
                 <constraints>
@@ -155,7 +167,7 @@
                 </constraints>
                 <properties>
                   <font name="NanumGothic" size="14"/>
-                  <text value="데리버거"/>
+                  <text value="베이컨버거"/>
                 </properties>
               </component>
               <component id="79dc3" class="javax.swing.JLabel" binding="deriPrice">
@@ -179,14 +191,20 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="a5cb1" binding="shrimpImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="a5cb1" binding="shrimpImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="8452c" class="javax.swing.JLabel" binding="shrimpImageLabel">
+                    <constraints border-constraint="Center"/>
+                    <properties>
+                      <text value="b"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <component id="6a0de" class="javax.swing.JButton" binding="shrimpCart">
                 <constraints>
@@ -243,15 +261,6 @@
               <title-color color="-16777216"/>
             </border>
             <children>
-              <grid id="688b2" binding="bulgogiImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </grid>
               <component id="c26ef" class="javax.swing.JButton" binding="bulgogiCart">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -295,6 +304,23 @@
                   </model>
                 </properties>
               </component>
+              <grid id="d0565" binding="bulgogiImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="5bfb8" class="javax.swing.JLabel" binding="bulgogiImageLabel">
+                    <constraints border-constraint="Center"/>
+                    <properties>
+                      <maximumSize width="29" height="17"/>
+                      <minimumSize width="29" height="17"/>
+                      <text value="a"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="75755" binding="cokePanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -307,14 +333,20 @@
               <title-color color="-16777216"/>
             </border>
             <children>
-              <grid id="e684c" binding="cokeImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="e684c" binding="cokeImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="6d539" class="javax.swing.JLabel" binding="cokeImageLabel">
+                    <constraints border-constraint="Center"/>
+                    <properties>
+                      <text value="d"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <component id="906d6" class="javax.swing.JComboBox" binding="cokeAmount">
                 <constraints>
@@ -379,14 +411,23 @@
                   <text value="아이스크림"/>
                 </properties>
               </component>
-              <grid id="903c3" binding="icecreamImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="903c3" binding="icecreamImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="56aaa" class="javax.swing.JLabel" binding="icecreamImageLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="f"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <component id="1863c" class="javax.swing.JLabel" binding="icecreamPrice">
                 <constraints>
@@ -444,14 +485,23 @@
                   <text value="스프라이트"/>
                 </properties>
               </component>
-              <grid id="edffe" binding="spriteImage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="edffe" binding="spriteImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="f8221" class="javax.swing.JLabel" binding="spriteImageLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="e"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <component id="1c0a9" class="javax.swing.JLabel" binding="spritePrice">
                 <constraints>
