--- a/src/Kiosk.form
+++ b/src/Kiosk.form
@@ -54,7 +54,9 @@
                 <properties>
                   <enabled value="true"/>
                   <font name="NanumGothic"/>
+                  <minimumSize width="30" height="50"/>
                   <preferredScrollableViewportSize width="450" height="220"/>
+                  <preferredSize width="150" height="60"/>
                   <rowHeight value="25"/>
                 </properties>
               </component>
@@ -119,8 +121,7 @@
               <font/>
             </border>
             <children>
-              <grid id="adae4" binding="deriImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="adae4" binding="deriImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -128,11 +129,9 @@
                 <border type="none"/>
                 <children>
                   <component id="45325" class="javax.swing.JLabel" binding="deriImageLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
+                    <constraints border-constraint="Center"/>
                     <properties>
-                      <text value="cc"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
@@ -167,7 +166,7 @@
                 </constraints>
                 <properties>
                   <font name="NanumGothic" size="14"/>
-                  <text value="베이컨버거"/>
+                  <text value="데리버거"/>
                 </properties>
               </component>
               <component id="79dc3" class="javax.swing.JLabel" binding="deriPrice">
@@ -201,7 +200,7 @@
                   <component id="8452c" class="javax.swing.JLabel" binding="shrimpImageLabel">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <text value="b"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
@@ -316,7 +315,7 @@
                     <properties>
                       <maximumSize width="29" height="17"/>
                       <minimumSize width="29" height="17"/>
-                      <text value="a"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
@@ -340,10 +339,10 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="6d539" class="javax.swing.JLabel" binding="cokeImageLabel">
+                  <component id="34b19" class="javax.swing.JLabel" binding="cokeImageLabel">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <text value="d"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
@@ -411,8 +410,7 @@
                   <text value="아이스크림"/>
                 </properties>
               </component>
-              <grid id="903c3" binding="icecreamImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="903c3" binding="icecreamImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -420,11 +418,9 @@
                 <border type="none"/>
                 <children>
                   <component id="56aaa" class="javax.swing.JLabel" binding="icecreamImageLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
+                    <constraints border-constraint="Center"/>
                     <properties>
-                      <text value="f"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
@@ -485,8 +481,7 @@
                   <text value="스프라이트"/>
                 </properties>
               </component>
-              <grid id="edffe" binding="spriteImagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="edffe" binding="spriteImagePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -494,11 +489,9 @@
                 <border type="none"/>
                 <children>
                   <component id="f8221" class="javax.swing.JLabel" binding="spriteImageLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
+                    <constraints border-constraint="Center"/>
                     <properties>
-                      <text value="e"/>
+                      <text value=" "/>
                     </properties>
                   </component>
                 </children>
