--- a/src/Kiosk.form
+++ b/src/Kiosk.form
@@ -66,7 +66,7 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="e755e" binding="RightPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e755e" binding="RightPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="2" left="2" bottom="2" right="2"/>
         <constraints border-constraint="East"/>
         <properties/>
@@ -101,6 +101,15 @@
             <properties>
               <font name="NanumGothic" size="18"/>
               <text value="장바구니 담기 완료"/>
+            </properties>
+          </component>
+          <component id="2bcf" class="javax.swing.JButton" binding="현금결제Button" default-binding="true">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="NanumGothic" size="18"/>
+              <text value="현금 결제"/>
             </properties>
           </component>
         </children>
